Implement pagination on entity tables.

--- a/spindle/static/style.scss
+++ b/spindle/static/style.scss
@@ -220,12 +220,21 @@ body, html {
     }
 }
 
-.table-entity-collection {
-    th {
-        white-space: nowrap;
+.entity-table {
+    .table-entity-collection {
+        th {
+            white-space: nowrap;
+        }
+
+        .object {
+            width: 40%;
+        }
     }
 
-    .object {
-        width: 40%;
+    .pagination {
+        margin-top: 0;
+        a {
+            cursor: pointer;
+        }
     }
 }
