--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div ng-cloak ng-view></div>
+    <div ng-cloak ng-view autoscroll="true"></div>
   </div>
 
   {% if not config.DEBUG %}
