Further roll out sessions and users system.

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" ng-bind="session.user.name">
         </div>
       </div>
     </div>
@@ -93,6 +93,7 @@
       "js/services/metadata.js",
       "js/services/query.js",
       "js/services/schema.js",
+      "js/services/session.js",
       "js/directives/bind_value.js",
       "js/directives/entity_icon.js",
       "js/directives/entity_table.js",
