--- a/spindle/templates/angular/entity.html
+++ b/spindle/templates/angular/entity.html
@@ -1,4 +1,4 @@
-<div class="container entity-detail">
+<div class="entity-detail">
   <div class="row">
     <div class="col-md-12" ng-show="data.$schema">
       <h2>
