Basic collections editor and adding entities to collection.

--- a/spindle/static/style/_search.scss
+++ b/spindle/static/style/_search.scss
@@ -5,7 +5,7 @@
     margin: 0;
     list-style-type: none;
 
-    li {
+    li.result {
         cursor: pointer;
         margin-bottom: $spacing * 4;
 
