--- a/spindle/templates/angular/search.html
+++ b/spindle/templates/angular/search.html
@@ -26,6 +26,9 @@
         infinite-scroll-distance="2" infinite-scroll-disabled="loading">
         <li ng-repeat="result in results.results"
           class="result">
+          <div class="pull-right">
+            <collection-add subject="result.id" class="btn-xs"></collection-add>
+          </div>
           <a class="title" href="#/entity/{{result.id}}">
             <entity-icon schema="result.$schema"></entity-icon> {{result.name}}
           </a>
