--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -80,6 +80,8 @@
       "bower_components/angular/angular.js",
       "bower_components/angular-animate/angular-animate.js",
       "bower_components/angular-route/angular-route.js",
+      "bower_components/angular-bootstrap/ui-bootstrap.js",
+      "bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
       "bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js",
       "bower_components/angulartics/src/angulartics.js",
       "bower_components/angulartics/src/angulartics-piwik.js" %}
@@ -97,10 +99,12 @@
       "js/directives/entity_table.js",
       "js/directives/entity_table_column.js",
       "js/directives/entity_address.js",
+      "js/directives/collection_add.js",
       "js/directives/search_facet.js",
       "js/controllers/home.js",
       "js/controllers/search.js",
-      "js/controllers/entity.js",
+      "js/controllers/entities.js",
+      "js/controllers/collections.js",
       "js/filters.js",
       "js/util.js" %}
     <script src='{{ ASSET_URL }}'></script>
