--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -30,6 +30,10 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#/">Collections</a></li>
+          <li><a href="#/search">Search</a></li>
+        </ul>
         <form class="navbar-form navbar-left" role="search" ng-submit="submitSearch()">
           <div class="form-group">
             <input type="text" class="form-control" ng-model="query.state.q"
@@ -49,7 +53,8 @@
           </li>
         </ul>
         <p class="navbar-text navbar-right" ng-cloak ng-show="session.logged_in">
-          Signed in as <span ng-bind="session.user.name"></span>
+          <i class="fa fa-user"></i>
+          <span ng-bind="session.user.name"></span>
         </p>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
