Implement a basic collection-viewing controller.

--- a/spindle/templates/angular/search.html
+++ b/spindle/templates/angular/search.html
@@ -29,7 +29,7 @@
           <div class="pull-right">
             <collection-add subject="result.id" class="btn-xs"></collection-add>
           </div>
-          <a class="title" href="#/entity/{{result.id}}">
+          <a class="title" href="#/entities/{{result.id}}">
             <entity-icon schema="result.$schema"></entity-icon> {{result.name}}
           </a>
           <div class="summary">
