--- a/spindle/templates/angular/home.html
+++ b/spindle/templates/angular/home.html
@@ -17,10 +17,16 @@
     <search-facet results="summary" facet="$sources"
       type="sources" title="Browse by source">
     </search-facet>
-  </div>
-  <div class="col-md-6">
     <search-facet results="summary" facet="$schema"
       type="schemas" title="Browse by entity">
     </search-facet>
+  </div>
+  <div class="col-md-6">
+    <h3>Research collections</h3>
+    <ul>
+      <li ng-repeat="coll in collections.results">
+        <a ng-href="#/collections/{{coll.id}}">{{coll.title}}</a>
+      </li>
+    </ul>
   </div>
 </div>
