Organize HTML templates for Angular.

--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -110,8 +110,8 @@
       "js/controllers/search.js",
       "js/controllers/entities.js",
       "js/controllers/collections.js",
-      "js/filters.js",
-      "js/util.js" %}
+      "js/filters.js"
+  %}
     <script src='{{ ASSET_URL }}'></script>
   {% endassets %}
 
