JS small extension, split appController from routing.

--- a/spindle/templates/angular/collections/add.html
+++ b/spindle/templates/angular/collections/add.html
@@ -1,4 +1,4 @@
-<span class="btn-group collection-add" uib-dropdown
+<span class="btn-group collection-add" uib-dropdown auto-close="outsideClick"
   on-toggle="toggleDropdown(open)">
  <a uib-dropdown-toggle class="btn btn-default" ng-class="class">
    <i class="fa fa-list"></i> Collections
