--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -106,6 +106,7 @@
       "js/directives/entity_address.js",
       "js/directives/collection_add.js",
       "js/directives/search_facet.js",
+      "js/controllers/app.js",
       "js/controllers/home.js",
       "js/controllers/search.js",
       "js/controllers/entities.js",
