--- a/spindle/templates/angular/home.html
+++ b/spindle/templates/angular/home.html
@@ -23,6 +23,7 @@
   </div>
   <div class="col-md-6">
     <h3>Research collections</h3>
+    <a class="btn btn-primary" ng-click="newCollection()">New collection</a>
     <ul>
       <li ng-repeat="coll in collections.results">
         <a ng-href="#/collections/{{coll.id}}">{{coll.title}}</a>
