--- a/spindle/templates/angular/collections/new.html
+++ b/spindle/templates/angular/collections/new.html
@@ -3,7 +3,7 @@
   <h4 class="modal-title">Create a collection</h4>
 </div>
 
-<form class="form-horizontal dataset-settings" role="form" name="forms.dim" ng-submit="create()">
+<form class="form-horizontal dataset-settings" role="form" ng-submit="create()">
   <div class="modal-body">
     <div class="form-group" ng-class="{'has-error': !validTitle()}">
       <label class="col-sm-3 control-label" for="title">Title</label>
