--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -99,6 +99,7 @@
       "js/services/query.js",
       "js/services/schema.js",
       "js/services/session.js",
+      "js/directives/permissions_edit.js",
       "js/directives/bind_value.js",
       "js/directives/entity_icon.js",
       "js/directives/entity_table.js",
