Hide collections thingie when user is not logged in.

--- a/spindle/templates/angular/collections/add.html
+++ b/spindle/templates/angular/collections/add.html
@@ -1,5 +1,5 @@
 <span class="btn-group collection-add" uib-dropdown auto-close="outsideClick"
-  on-toggle="toggleDropdown(open)">
+  on-toggle="toggleDropdown(open)" ng-show="visible">
  <a uib-dropdown-toggle class="btn btn-default" ng-class="class">
    <i class="fa fa-list"></i> Collections
  </a>
