--- a/spindle/static/style/main.scss
+++ b/spindle/static/style/main.scss
@@ -53,6 +53,20 @@ td.numeric {
     text-align: right;
 }
 
+// used by the collections dropdown-menu
+.dropdown-menu li a {
+    width: 100%;
+    position: relative;
+    padding-right: 3em;
+}
+
+.dropdown-menu li span.inline {
+    display: inline-block;
+    position: absolute;
+    right: 1em;
+}
+
+
 // page and spinner
 #page {
     position: relative;
