Source settings dialogue, source permissions API.

--- a/spindle/static/style/_search.scss
+++ b/spindle/static/style/_search.scss
@@ -86,4 +86,16 @@
         color: $text-muted;
         font-weight: 300;
     }
+
+    span.edit {
+        color: $text-muted;
+        // float: right;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+        display: inline-block;
+    }
+
+    .active span.edit {
+        color: #fff;
+    }
 }
