--- a/spindle/templates/angular/collections/settings.html
+++ b/spindle/templates/angular/collections/settings.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
   <button type="button" class="close" ng-click="close()" aria-hidden="true">&times;</button>
-  <h4 class="modal-title">Settings</h4>
+  <h4 class="modal-title">Collection settings</h4>
 </div>
 
-<form class="form-horizontal dataset-settings" role="form" ng-submit="save()">
+<form class="form-horizontal " role="form" ng-submit="save()">
   <div class="modal-body">
     <div class="form-group" ng-class="{'has-error': !validTitle()}">
       <label class="col-sm-2 control-label" for="title">Title</label>
