--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -111,6 +111,7 @@
       "js/controllers/home.js",
       "js/controllers/search.js",
       "js/controllers/entities.js",
+      "js/controllers/sources.js",
       "js/controllers/collections.js",
       "js/filters.js"
   %}
