--- a/spindle/templates/angular/search/facet.html
+++ b/spindle/templates/angular/search/facet.html
@@ -7,6 +7,9 @@
 
       <span class="badge">{{value.doc_count | number}}</span>
       {{meta[value.key].title}}
+      <span class="edit" ng-show="isSources()" ng-click="editSource(value.key, $event)">
+        <i class="fa fa-wrench"></i>
+      </span>
     </li>
   </ul>
 </div>
