--- a/spindle/templates/angular/sources/settings.html
+++ b/spindle/templates/angular/sources/settings.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="form-group" ng-class="{'has-error': !validURL()}">
-      <label class="col-sm-2 control-label" for="url">Title</label>
+      <label class="col-sm-2 control-label" for="url">URL</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="url" ng-model="source.url">
         <p class="help-block">
