--- a/spindle/templates/angular/collections/view.html
+++ b/spindle/templates/angular/collections/view.html
@@ -1,9 +1,8 @@
 <div class="row">
   <div class="col-md-12">
-    <h2>
-      {{collection.title}}
-    </h2>
+    <div class="pull-right">
+      <a class="btn btn-default" ng-show="editable" ng-click="editSettings()">Settings</a>
+    </div>
+    <h2>{{collection.title}}</h2>
   </div>
 </div>
-
-<a ng-show="editable" ng-click="editSettings()">Settings</a>
