--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -105,6 +105,7 @@
 
   {% assets filters="uglifyjs", output="build/app.js",
       "js/app.js",
+      "js/util.js",
       "js/services/metadata.js",
       "js/services/query.js",
       "js/services/schema.js",
