--- a/spindle/templates/angular/entities/view.html
+++ b/spindle/templates/angular/entities/view.html
@@ -81,7 +81,7 @@
         </entity-table-column>
       </entity-table>
 
-      <entity-table bind="bind" collection="ownerships" columns="4"
+      <entity-table bind="bind" collection="owners" columns="4"
         title="Owners and shareholders">
         <entity-table-column path="owner" title="Name">
         </entity-table-column>
