--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -116,6 +116,7 @@
       "js/directives/entity_icon.js",
       "js/directives/entity_table.js",
       "js/directives/entity_table_column.js",
+      "js/directives/entity_editor.js",
       "js/directives/entity_address.js",
       "js/directives/collection_add.js",
       "js/directives/search_facet.js",
