Try and make the editor display different types correctly.

--- a/spindle/templates/angular/collections/view.html
+++ b/spindle/templates/angular/collections/view.html
@@ -5,8 +5,8 @@
     </div>
     <h2>{{collection.title}}</h2>
 
-    <uib-tabset>
-      <uib-tab ng-repeat="model in models" active="tab.active" select="updateTables()">
+    <uib-tabset justified="true">
+      <uib-tab ng-repeat="model in models" active="tab.active">
         <uib-tab-heading>
           <entity-icon schema="model.schema.id"></entity-icon>
           {{model.getPlural()}}
