Style more of the application.

--- a/spindle/static/style/_entity.scss
+++ b/spindle/static/style/_entity.scss
@@ -2,8 +2,11 @@
 // entity details
 .entity-detail {
     h2 {
-        font-weight: 300;
         margin-bottom: $spacing * 2;
+    }
+
+    dl dt {
+        @include small-title;
     }
 
     .table {
