--- a/spindle/templates/angular/collections/add.html
+++ b/spindle/templates/angular/collections/add.html
@@ -1,6 +1,6 @@
 <span class="btn-group collection-add" uib-dropdown auto-close="outsideClick"
   on-toggle="toggleDropdown(open)" ng-show="visible">
- <a uib-dropdown-toggle class="btn btn-default" ng-class="class">
+ <a uib-dropdown-toggle class="btn btn-success" ng-class="class">
    <i class="fa fa-list"></i> Collections
  </a>
  <ul class="uib-dropdown-menu dropdown-menu-right" role="menu">
