--- a/spindle/static/style/_mixins.scss
+++ b/spindle/static/style/_mixins.scss
@@ -1,4 +1,17 @@
 
+@mixin header-font {
+    font-family: $font-family-sans-serif;
+    font-weight: 400;
+}
+
+@mixin small-title {
+    color: $text-muted;
+    text-transform: uppercase;
+    font-size: 0.90em;
+    font-weight: light;
+}
+
+
 @mixin placeholder-color($color) {
     &::-webkit-input-placeholder {
        color: $color;
