--- a/spindle/static/style/main.scss
+++ b/spindle/static/style/main.scss
@@ -6,7 +6,7 @@ $occrp-dark: #3a4953;
 
 // override bootstrap defaults
 $brand-primary: $occrp-red;
-$brand-success: $occrp-green;
+$brand-success: $occrp-dark;
 $text-color: #333;
 $text-muted: #999;
 $gray-subtle: #f0f0f0;
@@ -15,14 +15,10 @@ $spacing: 0.5em;
 
 $font-family-sans-serif:  'Open Sans', sans-serif;
 $input-border-focus: $brand-primary;
+// $border-radius-base: 0;
 
 @import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
-// @import "mixins";
-
-@mixin header-font {
-    font-family: $font-family-sans-serif;
-    font-weight: 300;
-}
+@import "mixins";
 
 div[ng-view].ng-enter {
     animation: fadeIn 0.3s;
@@ -38,7 +34,30 @@ a, a.action {
 
 body, html {
     height: 100%;
+    font-size: .95em;
+    background-color: $occrp-dark;
+    // background-color: $gray-subtle;
+}
+
+// page and spinner
+#page {
+    position: relative;
+    padding-top: 70px;
+    padding-bottom: $spacing * 4;
+    min-height: 80%;
     background-color: $page-bg;
+}
+
+footer {
+    color: $page-bg;
+    border-top: 1px solid $table-border-color;
+    padding-top: $spacing * 2;
+    padding-bottom: $spacing * 4;
+
+    a {
+        color: $page-bg;
+        text-decoration: underline;
+    }
 }
 
 .empty-value {
@@ -46,10 +65,22 @@ body, html {
 }
 
 .jumbotron {
-    background-color: $gray-subtle;
+    margin-top: $spacing * 2;
+    background-color: $occrp-dark;
+    color: $page-bg;
+    padding-top: 30px;
+    padding-bottom: 24px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: 700;
 }
 
-td.numeric {
+.short-intro {
+    padding-top: 0em;
+    padding-bottom: 2em;
+}
+
+td.numeric, th.numeric {
     text-align: right;
 }
 
@@ -72,38 +103,8 @@ td.numeric {
     right: 1em;
 }
 
-// page and spinner
-#page {
-    position: relative;
-    min-height: 80%;
-}
 
-#spinner-overlay {
-    position: absolute;
-    z-index: 1100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 30em;
-    height: 100%;
-    background-color: $page-bg;
-
-    .spinner {
-        margin-top: 3em;
-        text-align: center;
-        color: $text-muted;
-
-        &.failed {
-            color: $brand-primary;
-        }
-
-        i {
-            font-size: 4em;
-            margin: 0.5em;
-        }
-    }
-}
-
+@import "spinner";
 @import "navbar";
 @import "search";
 @import "entity";
