--- a/spindle/templates/angular/collections/view.html
+++ b/spindle/templates/angular/collections/view.html
@@ -1,9 +1,14 @@
 <div class="row">
   <div class="col-md-12">
     <div class="pull-right">
-      <a class="btn btn-default" ng-show="editable" ng-click="editSettings()">Settings</a>
+      <a class="btn btn-success" ng-show="editable" ng-click="editSettings()">
+        <i class="fa fa-wrench"></i>
+        Settings
+      </a>
     </div>
-    <h2>{{collection.title}}</h2>
+    <h2>
+      {{collection.title}}
+    </h2>
 
     <uib-tabset justified="true">
       <uib-tab ng-repeat="model in models" active="tab.active">
