--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -21,8 +21,8 @@
   <link rel="shortcut icon" href="/static/img/occrp-logo-bg.png">
 </head>
 <body ng-controller="AppController as app">
-  <nav class="navbar navbar-default" id="topnav">
-    <div class="container-fluid">
+  <nav class="navbar navbar-default navbar-fixed-top" id="topnav">
+    <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <a class="navbar-brand" href="/#/">
@@ -32,14 +32,16 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="#/">Collections</a></li>
-          <li><a href="#/search">Search</a></li>
-        </ul>
         <form class="navbar-form navbar-left" role="search" ng-submit="submitSearch()">
           <div class="form-group">
-            <input type="text" class="form-control" ng-model="query.state.q"
-              placeholder="Search for people, companies, etc...">
+            <div class="input-group">
+              <span class="input-group-addon">
+                <i class="fa fa-search"></i>
+              </span>
+              <input type="text" class="form-control" id="search-bar"
+                ng-model="query.state.q"
+                placeholder="Search for people, companies, etc...">
+            </div>
           </div>
         </form>
         <ul class="nav navbar-nav navbar-right" ng-cloak>
@@ -74,10 +76,29 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div id="view" class="container">
       <div ng-cloak ng-view autoscroll="true"></div>
     </div>
   </div>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Organized Crime and Corruption Reporting Project</p>
+          <p>
+            Send any suggestions and feedback to
+            <a href="mailto:tech@occrp.org">tech@occrp.org</a>.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <p class="pull-right">
+            <i class="fa fa-github-square"></i>
+            <a href="https://github.com/occrp">open-source code</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   {% include "analytics.html" %}
 
