--- a/spindle/templates/index.html
+++ b/spindle/templates/index.html
@@ -93,7 +93,7 @@
         <div class="col-md-6">
           <p class="pull-right">
             <i class="fa fa-github-square"></i>
-            <a href="https://github.com/occrp">open-source code</a>
+            <a href="https://github.com/occrp">source code</a>
           </p>
         </div>
       </div>
