--- a/spindle/static/style/_editor.scss
+++ b/spindle/static/style/_editor.scss
@@ -11,4 +11,26 @@
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+
+    td {
+        cursor: text;
+
+        input {
+            width: 100%;
+            border: 0;
+            box-shadow: none;
+            outline: none;
+            background-color: transparent;
+            margin: -3px;
+            
+            &:hover, &:active, &:focus {
+                outline: none;
+                box-shadow: none;  
+            }
+        }
+    }
+
+    td.selected {
+        border: 1px solid $occrp-dark;
+    }
 }
